objects/LLC_BI__Booking_Config__c.object
<CustomObject>
    <description>This object stores product-level configuration for Automated Booking features, such as core-specific information, review page/boarding sheets, and integration endpoints.</description>
    <fields>
        <fullName>LLC_BI__Booking_Action_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this lookup field to define an Automated Booking action Id.</description>
        <label>Booking Action Id</label>
        <referenceTo>LLC_BI__Booking_Action__c</referenceTo>
        <relationshipName>Booking_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This is used as a reference back to System Properties</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Context_Id__c</fullName>
        <description>This is context Id of the product, product type, or product line that this config is for</description>
        <label>Product Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Booking Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>